GitHub and LinkedIn
added links

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         -->
       </div>
     </div>
-    <footer><a href="">Open-source</a> by  Katarzyna Czepiela</footer>
+    <footer><a href="https://github.com/katcze91/sheCodesWeek7Homework">Open-source</a> by  <a href="https://www.linkedin.com/in/katarzyna-czepiela-55830634/"> Katarzyna Czepiela</a></footer>
     <script src="src/script.js"></script>
   </body>
 </html>
