--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <video id="cloudVideo" src="video/clouds.mp4" autoplay muted loop></video>
-    <div class="card" style="width: 60rem">
+    <div class="card">
       <div class="card-body">
         <form id="search-form" class="mb-2">
         <div class="row" >
