--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           </div>
          <div class="col-9">
-          <input type="submit" value="Search 🔎" class="searchButton" />
+          <input type="submit" value="Search" class="searchButton" />
          </div>
         </div>
       </form>
